whp-web/src/main/webapp/styles/standard.css
body {
    margin-top: 20px;
}

#mainContent {
    margin-top: 20px;
    margin-bottom: 70px;
}

#footer {
    padding-right: 20px;
    padding-top: 15px;
    padding-left: 60px;

    border-top: 1px ridge;
    background: #FAFADE;
}

#whp-logo {
    height: 35px;
}

#motech-logo {
    height: 38px
}

#navibar {
    padding-top: 5px;
}

.well.small-well {
    padding: 0px;
    margin-bottom: 5px;
    color: #54555a;
}
#whp-logo {
    margin-right: 0px;
}

#footer-left-section {
    padding-bottom: 5px;
}

.login-btn {
    width: 100px;
}

.white {
    background-color: white;
}

.text-center {
    text-align: center;
}

#version {
    color: #555555;
    font-size: 0.8em;
}

.page-header.form-header {
    padding-bottom: 0px;
}

.paused {
    background-color: #FFB6C1;
    color: black;
}

.label-legend {
    background-color: #3A87AD;
    vertical-align: center;
}

.table tbody tr:hover td {
    background-color: #E3F5FA;
    color: black;
}

#numberSelect {
    text-align: center;
}

#remarks {
    height: 100px;
}

.disable-remarks {
    resize: none;
}

#weeklyAdherenceForm label {
    text-align: left;
    margin-left: 20px;
}

#legend-container{
    display: inline-block;
    overflow: auto;
}

.sharp, .sharp td, .sharp th {
    border-color: #000000;
}

.fixed th, .fixed td {
    width: 15px;
    text-align: center;
}
.fixed td {
   max-width: 15px;
   min-width: 15px;
}

.tick-icon, .windings-font {
    font-weight: bold;
    font-size: 175%;
}
.round-icon {
    font-weight: bold;
    font-size: 140%;
}

.legend-round-icon {
    font-weight: bold;
    font-size: 130%;
}

.tick-icon div, .round-icon div {
    margin-left: -1px;
}

.dash-icon{
    font-family: Arial;
    font-size: 200%;
}

.disable-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.link, .editable {
    cursor: pointer
}
.watermarked-sunday{
    color: black;
    font-weight: bold;
}

.sunday div{
    border: 3px black solid;
    width: 22px;
    height: 22px;
    margin-left: -6px;
    margin-top: -5px;
    padding: 0px;
    margin-bottom: -5px;
    margin-right: -6px;
    line-height: 21px;
}

.bg-gray{
    background: url('../img/grey-dot.png') repeat 0 0;
}

.pausedAdherenceData{
    background-color: lightPink;
}
.float-right {
 float:right;
}

.warning-text {
    color: #b22222;
    font-weight: bold;
}

.select-xlarge {
    width: 280px;
}

.field-error, .field-error label {
    color: #bd4247;
    font-weight: bold;
}
.alert-info {
    background-color: #EDEBBF;
    border-color: #E0D6AA;
    color: #817B02;
    font-weight: bold;
}
.form-button-left {
    margin: 0px;
    float: left;
}
.form-button-right {
    margin-right: 301px;
    float: right;
}
.leftnav-menu-margin {
    margin-left: -200px;
}

div.buttons a, div.buttons button {
    float: right;
    margin-left: 20px;
}

